# world-cup-2026-predictor

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  USER_GUIDE.md  config.py  config.yaml  conftest.py  pyproject.toml  requirements.txt  worldcup-2026-predictor-SPEC.md
.claude/skills/update-fixtures/: SKILL.md  fetch_results.py  swings.py
.github/workflows/: ci.yml  pages.yml
data/: README.md  aliases.json  confederations.json  groups.json  results_2026.json  schedule.json  snapshot_manifest.json  third_place_allocation.json
experiments/: ledger.csv
model/: README.md  __init__.py  dixon_coles.py  evaluate.py  params.json  ratings.py  train.py
model/evaluation/: __init__.py  backtest.py  baselines.py  calibrate.py  metrics.json  metrics.md  metrics.py
model/tests/: test_data.py  test_dixon_coles.py  test_metrics.py
scripts/: __init__.py  _gen_schedule.mjs  benchmark.py  build_groups.py  refresh_data.py  run_pipeline.py  sensitivity.py  validate_data.py
simulation/: README.md  __init__.py  group_stage.py  knockout.py  monte_carlo.py  setup.py  third_place.py  tournament.py
simulation/tests/: test_group_stage.py  test_knockout.py  test_monte_carlo.py  test_third_place.py  test_tournament.py
web/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/public/: outcomes_sample.json  predictions.json
web/src/: App.tsx  index.css  main.tsx  types.ts
web/src/components/: Bar.tsx  BracketSlot.tsx  ConditionsBar.tsx  ConfidenceTag.tsx  ContentPage.tsx  Explainer.tsx  Footer.tsx  GroupTable.tsx  MatchOdds.tsx  (+7 more)
(+24 files in other folders)
